fixed the back button, centered the food o grid cell. Also finished the food function so it appears in random spots inside the grid.

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       </video>
       
     <button class="play-button"><a href="game.html">PLAY</a></button>
+    <h1>Snake Game</h1>
+    <h2>- JV -</h2>
 </body>
 </html>
