Added collision function so the snake dies if it hits the walls or itself.

--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <a id="backBtn" href="index.html">BACK</a>
+        <img id="updateScore" src="/images/uchiha.png">
     <main class="grid-wrapper">
         <section class="grid"></section>
         <div class="food" id="randomFood"></div>
