live score added and functioning properly

--- a/game.html
+++ b/game.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <a id="backBtn" href="index.html">BACK</a>
-        <img id="updateScore" src="/images/uchiha.png">
+
+        <h4 id="scoreDisplay"></h4>
+
     <main class="grid-wrapper">
         <section class="grid"></section>
         <div class="food" id="randomFood"></div>
     </main>
+
+    <button id="startBtn">START</button>
 </body>
 </html>
