Created a start button, and changed the game over alert to a h1 that pops up on the screen.

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <title>Snake Game - JV</title>
 </head>
 <body>
+    
     <a id="backBtn" href="index.html">BACK</a>
 
         <h4 id="scoreDisplay"></h4>
@@ -15,8 +16,10 @@
     <main class="grid-wrapper">
         <section class="grid"></section>
         <div class="food" id="randomFood"></div>
+
+        <button id="startBtn">PLAY AGAIN!</button>
+        <h1 id="gameOver">GAME OVER!</h1>
     </main>
 
-    <button id="startBtn">START</button>
 </body>
 </html>
